Reworded start over text - #15

--- a/html/pte.html
+++ b/html/pte.html
@@ -120,7 +120,7 @@
 			{{if $data['success']}}
 			<div id="success">
 				<p>Images were created successfully.</p>
-				<p>Click <a href="" onclick="window.location.reload();">here</a> to start over.</p>
+				<p>Click <a href="" onclick="window.location.reload();">here</a> to modify another thumbnail.</p>
 			</div>
 				{{if $data['error']}}
 				<div id="error">We noticed some potential issues however:
