Added donate information

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     pre { background: #000; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
+	 .wepay_widget { margin: 20px auto; }
   </style>
 </head>
 
@@ -69,7 +70,7 @@
     </div>
 
   </div>
-
+<a class="wepay-widget" href="https://www.wepay.com/donate/34543/?widget_type=donations&widget_donation_id=34543&widget_auth_token=8af0c8d1030cb39acf8be63a2aea19344cae6fc9&widget_show_description=1&widget_show_thermometer=0&widget_show_donations=1">Donate to Post Thumbnail Editor Plugin</a><script id="wepay-widget_script" type="text/javascript" src="https://www.wepay.com/js/widget.wepay.js"></script>
   
 </body>
 </html>
